readable: underlines navbar active, fixes #175

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -7494,6 +7494,19 @@ td.visible-print {
   padding-top: 20px;
 }
 
+.navbar-nav > .active > a,
+.navbar-nav > .active > a:hover {
+  text-decoration: underline;
+}
+
+.navbar-default .navbar-nav > .active > a:hover {
+  color: #134fb8;
+}
+
+.navbar-inverse .navbar-nav > .active > a:hover {
+  color: #ffffff;
+}
+
 .navbar-brand {
   padding-top: 19px;
 }
